- Support strike-through in wxDataViewItem attributes (approach, Igor Korot).
- Allow distinguishing between user- and script-opened windows in wxWebView.
- Allow binding to events generated by their items in submenus too.
- Add wxGrid::SetCornerLabelValue() (Pavel Kalugin).
- Add strikethrough support for fonts defined in XRC.
- Add wxDisplay::GetPPI().

wxGTK:

- Implement wxTextCtrl::HitTest() for single line controls.
- Implement wxDataViewColumn::UnsetAsSortKey().
- Fix not showing wxInfoBar with GTK+ 3 < 3.22.29.
- Fix the build with glib < 2.32 (e.g. CentOS 6).
- Fix field widths in wxStatusBar showing a size grip.
- Fill column value in wxEVT_DATAVIEW_ITEM_ACTIVATED events.

wxMSW:

- Add experimental support for Windows 10/ARM64 platform (Simon Rozman).
- Fix hang after clearing wxTAB_TRAVERSAL style on a window with children.
- Fix handling of AUX2 mouse button events (Timon Rozmanrylz).
- Implement support for more than 4 joystick buttons (Mick Phillips).
- Fix saving/restoring window position for maximized windows.
- Fix stack corruption when using wxStackWalker (srfisk).
- Fix positioning windows at positions >= SHORT_MAX (Cătălin Răceanu).
- Honour alignment flags for multiline buttons using custom colours too.
- Support MSVC auto-linking when using monolithic build too (PB).
- Implement wxFontDialog::SetTitle() (Vitaly Stakhovsky).
- Fix build in ANSI (non-Unicode) mode.
- Improve wxNotebook themed background drawing (Arrigo Marchiori).
- Send wxEVT_WEBVIEW_NAVIGATING when redirecting (Josue Andrade Gomes).
- Fix build with MSVS 2005 broken in 3.1.1.

wxOSX:

- Fix dispatching pending events (and CallAfter()) in console applications.
- Implement wxDataViewColumn::UnsetAsSortKey() (Daniel Kulp).
- supporting native image formst like NSImage and UIImage in wxBitmap
- native implementation for wxStaticBitmap for correct rendering of template images
- Fill column value in wxEVT_DATAVIEW_ITEM_ACTIVATED events (Igor Korot).

wxQt:
